--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@octokit/rest": "^22.0.0",
     "next": "15.5.3",
+    "openai": "^5.21.0",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
