--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "openai": "^5.21.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
